[package]
name = "gassentinel-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
coap = "0.12"
coap-lite = "0.9.1"
mdns-sd = "0.7.3"
regex = "1.8.4"
serde = "1.0.163"
tokio = { version = "1", features = ["full"] }
influxdb2 = "0.4.2"
influxdb2-structmap = "0.2"
num-traits = "0.2"
futures = "0.3.28"
influxdb2-derive = "0.1.1"
local-ip-address = "0.5.3"
env_logger = "0.10.0"
libmdns = "0.7"
astro-dnssd = "0.3.2"
